# web-jam-tools

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  WebJamApps.code-workspace  deno.json  package-lock.json  package.json
.circleci/: config.yml
.github/: CODEOWNERS
docs/: ai-assistant-google-setup.md  ai-team-playbook.md  api-integrations.md  claude-code-guardrails.md  claude-code-setup-plugin.md  deno-deploy-setup.md  rclone-setup.md  scripts.md
gemma-cli/: pyproject.toml
gemma-cli/gemma_cli/: auth.py  cli.py  guards.py  llm.py  memory.py  queue.py
gemma-cli/gemma_cli/tools/: calendar.py  drive.py  gmail.py  memory.py  templates.py  venue_contacts.py
gemma-cli/tests/: test_gig_bulleted_entry.py  test_loop_guard.py
gig-scraper/: .gitignore  README.md  fetch_api_songs.js  gig_booking_2025_data.json  gigs_data.json  list_buttons.js  package-lock.json  package.json  raw_output.json  read_excel.js  scrape_gigs.js  scrape_songs.js
scripts/: add_beliveau_oct_reminder.py  add_macnbobs_followup.py  audit.sh  backup-claude-memory.sh  bootstrap-project.sh  cancel_amrheins_call.py  cancel_valhalla_call.py  check-env.sh  check_calendar_conflicts.py  convert_videos_to_mp4.sh  coverage-check.sh  create-draft-pr.sh  debug-wix.js  drive-cleanup-prepass.sh  extract_monthly_devotional.py  find-pagination.js  fix_calendar_dates.py  gemma_next.py  get-unique-venues.js  gmail_helper.py  google_calendar_helper.py  google_calendar_helper_v2.py  google_calendar_helper_v3.py  google_tasks_helper.py  handle-agy-tasks.sh  handle-gemini-tasks.sh  renumber-queue.py  sast.sh  (+14 more)
(+26 files in other folders)
