[project]
name = "gemma-cli"
version = "0.1.0"
description = "Local Gemma 4 (Ollama) CLI with Google Drive/Calendar/Gmail tool calling"
requires-python = ">=3.10"
dependencies = [
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
  "google-auth-oauthlib>=1.0",
  "requests>=2.30",
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
]

[project.scripts]
gemma = "gemma_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gemma_cli*"]
